--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
 <body>
 
     <div class="container">
-        <h1>To-Do-List</h1>
+        <h1>My-To-Do-List</h1> <hr>
         <input type="text" id="taskInput" placeholder="Add New Task...">
         <button onclick="addTask()">Add</button>
-        <button>Delete Checked</button>
+        <button class="btn" onclick="deleteTaskCheck()">Delete Checked</button>
         <ul id="taskList"></ul>
 
       
     </div>
-    
-
-
-
-
-
-
 
 <script src="script.js"></script>
 </body>
