--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body>
 
     <div class="container">
-        <h1>My-To-Do-List</h1> <hr>
+        <h1>My-To-Do-List</h1> 
         <input type="text" id="taskInput" placeholder="Add New Task...">
         <button onclick="addTask()">Add</button>
         <button class="btn" onclick="deleteTaskCheck()">Delete Checked</button>
-        <ul id="taskList"></ul>
-
-      
+        <ul id="taskList"></ul>  
     </div>
 
 <script src="script.js"></script>
